[gd_scene load_steps=4 format=2]

[ext_resource path="res://code/movingPlatorm.gd" type="Script" id=1]
[ext_resource path="res://img/Tuto/tutoYoutube2.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 33 )

[node name="moving_platform_2p" type="Node2D"]
script = ExtResource( 1 )

[node name="platform_t" type="RigidBody2D" parent="."]
position = Vector2( 0, 64 )
collision_layer = 2
collision_mask = 0
mode = 3
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="platform_t"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 128, 128, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform_t"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="platform_t"]

[node name="pos_1" type="Position2D" parent="."]
position = Vector2( 0, -64 )
[connection signal="tween_completed" from="platform_t/Tween" to="platform_t" method="_on_Tween_tween_completed"]
